[gd_scene load_steps=5 format=3 uid="uid://cxae2nu1rsyeo"]

[ext_resource type="Script" path="res://examples/visual_novel_balloon/balloon.gd" id="1_5w8hw"]
[ext_resource type="PackedScene" uid="uid://ckvgyvclnwggo" path="res://addons/dialogue_manager/dialogue_label.tscn" id="1_ebrfe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sr5y7"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0
bg_color = Color(0.145098, 0.145098, 0.145098, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ma11q"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.301961, 0.301961, 0.301961, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="VisualNovelBalloon" type="CanvasLayer"]
script = ExtResource("1_5w8hw")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 3
stretch_mode = 6

[node name="Slot0" type="Marker2D" parent="."]
position = Vector2(181, 448)

[node name="Slot1" type="Marker2D" parent="."]
position = Vector2(358, 448)

[node name="Slot2" type="Marker2D" parent="."]
position = Vector2(553, 448)

[node name="Slot3" type="Marker2D" parent="."]
position = Vector2(768, 448)

[node name="Slot4" type="Marker2D" parent="."]
position = Vector2(947, 448)

[node name="Balloon" type="Control" parent="."]
custom_minimum_size = Vector2(0, 200)
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="ColorRect" type="ColorRect" parent="Balloon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.0588235, 0.105882, 0.129412, 1)

[node name="Margin" type="MarginContainer" parent="Balloon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="DialogueLabel" parent="Balloon/Margin" instance=ExtResource("1_ebrfe")]
layout_mode = 2

[node name="Responses" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.645
anchor_top = 0.653
anchor_right = 0.978
anchor_bottom = 0.653
offset_left = -344.04
offset_top = -52.144
offset_right = -343.656
offset_bottom = -0.144043
grow_vertical = 0

[node name="ResponseTemplate" type="RichTextLabel" parent="."]
offset_left = 48.0
offset_top = 694.0
offset_right = 399.0
offset_bottom = 740.0
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_sr5y7")
theme_override_styles/normal = SubResource("StyleBoxFlat_ma11q")
text = "Response template"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false

[connection signal="gui_input" from="Balloon" to="." method="_on_balloon_gui_input"]
